Adaption of table-margin - hopefully to ensure the visibility of logos in footer

--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,6 @@ table{
 	padding-left: 10px;
 	background-color: #fff;
 	height: 200px;
-	margin-top: -30px;
+	margin-top: 0.2em;
 	width:100%;
 }
